--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </article>
     </main>
 
-    <script src="https://unpkg.com/js-image-zoom@0.4.1/js-image-zoom.js" type="application/javascript" ></script>
+    <script src="./js-image-zoom.js" type="application/javascript" ></script>
     <script src="./script.js"></script>
     <script>
         var options = {
