--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
     <title>gallery</title>
 
     <link rel="stylesheet" href="style.css">
-
-    <link rel="preload" 
-    as="image" 
-    href="https://placehold.co/600x400/orange/white" 
-    src="https://placehold.co/600x400/orange/white">
-
 </head>
 <body>
     <main>
@@ -27,7 +21,7 @@
         </article>
     </main>
 
-    <script src="./js-image-zoom.js" type="application/javascript" ></script>
+    <script src="./node_modules/js-image-zoom" type="application/javascript" ></script>
     <script src="./script.js"></script>
     <script>
         var options = {
