--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </article>
     </main>
 
-    <script src="./node_modules/js-image-zoom" type="application/javascript" ></script>
+    <script src="./node_modules/js-image-zoom.js" type="application/javascript" ></script>
     <script src="./script.js"></script>
     <script>
         var options = {
