--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </article>
     </main>
 
-    <script src="./node_modules/js-image-zoom/js-image-zoom.js" type="application/javascript" ></script>
+    <script src="
+    https://cdn.jsdelivr.net/npm/js-image-zoom@0.7.0/js-image-zoom.min.js
+    "></script>
     <script src="./script.js"></script>
     <script>
         var options = {
