--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
         </article>
     </main>
 
-    <script src="
-    https://cdn.jsdelivr.net/npm/js-image-zoom@0.7.0/js-image-zoom.min.js
-    "></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-image-zoom@0.7.0/js-image-zoom.min.js"></script>
     <script src="./script.js"></script>
     <script>
         var options = {
     width: 400,
-    zoomWidth: 150,
-    zoomHeight: 200,
+    zoomWidth: 200,
+    zoomLensStyle: "background: rgba(0, 0, 0, 0.0);",
     offset: {vertical: 0, horizontal: 10}
 };
     new ImageZoom(document.getElementById("img-container"), options);
