--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An image gallery sort of like on amazon">
-    <title>Facebook 2.0.2.01</title>
+    <title>Mit smukke galleri</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Facebook 2.0.2.01</h1>
     <main>
         <article style="display: flex; flex-direction: column; align-items: center;">
             <div id="img-container">
