--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An image gallery sort of like on amazon">
-    <title>Mit smukke galleri</title>
+    <http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="An image gallery sort of like on amazon">
+        <title>Mit smukke galleri</title>
 
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
         <article style="display: flex; flex-direction: column; align-items: center;">
+
             <div id="img-container">
-                <img id="main_image" >
+                <img id="main_image">
             </div>
+
             <div class="thumbnails">
 
             </div>
@@ -25,12 +29,13 @@
     <script src="./script.js"></script>
     <script>
         var options = {
-    width: 400,
-    zoomWidth: 200,
-    zoomLensStyle: "background: rgba(0, 0, 0, 0.0);",
-    offset: {vertical: 0, horizontal: 10}
-};
-    new ImageZoom(document.getElementById("img-container"), options);
+            width: 400,
+            zoomWidth: 200,
+            zoomLensStyle: "background: rgba(0, 0, 0, 0.0);",
+            offset: { vertical: 0, horizontal: 10 }
+        };
+        new ImageZoom(document.getElementById("img-container"), options);
     </script>
 </body>
+
 </html>
